"""baseline core schema

Revision ID: 55711f10b2ce
Revises: 
Create Date: 2026-07-02 12:29:54.374161
"""
from alembic import op
import sqlalchemy as sa


revision = '55711f10b2ce'
down_revision = None
branch_labels = None
depends_on = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('user',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(length=80), nullable=False),
    sa.Column('password_hash', sa.String(length=256), nullable=False),
    sa.Column('is_admin', sa.Boolean(), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('email_verified', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('user', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_user_email'), ['email'], unique=True)
        batch_op.create_index(batch_op.f('ix_user_username'), ['username'], unique=True)

    op.create_table('analysis',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('operation', sa.String(length=200), nullable=False),
    sa.Column('result', sa.String(length=50), nullable=False),
    sa.Column('language', sa.String(length=50), nullable=False),
    sa.Column('similarity', sa.Float(), nullable=True),
    sa.Column('code1', sa.Text(), nullable=True),
    sa.Column('code2', sa.Text(), nullable=True),
    sa.Column('metrics', sa.Text(), nullable=True),
    sa.Column('analysis_text', sa.Text(), nullable=True),
    sa.Column('snapshot_json', sa.Text(), nullable=True),
    sa.Column('date_created', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('analysis', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_analysis_date_created'), ['date_created'], unique=False)
        batch_op.create_index(batch_op.f('ix_analysis_user_id'), ['user_id'], unique=False)

    op.create_table('subscription',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('plan_code', sa.String(length=32), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('stripe_customer_id', sa.String(length=255), nullable=True),
    sa.Column('stripe_subscription_id', sa.String(length=255), nullable=True),
    sa.Column('current_period_end', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('subscription', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_subscription_stripe_customer_id'), ['stripe_customer_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_subscription_stripe_subscription_id'), ['stripe_subscription_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_subscription_user_id'), ['user_id'], unique=True)

    op.create_table('usage_record',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('period', sa.String(length=7), nullable=False),
    sa.Column('analyses_count', sa.Integer(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'period', name='uq_usage_user_period')
    )
    with op.batch_alter_table('usage_record', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_usage_record_period'), ['period'], unique=False)
        batch_op.create_index(batch_op.f('ix_usage_record_user_id'), ['user_id'], unique=False)

    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('usage_record', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_usage_record_user_id'))
        batch_op.drop_index(batch_op.f('ix_usage_record_period'))

    op.drop_table('usage_record')
    with op.batch_alter_table('subscription', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_subscription_user_id'))
        batch_op.drop_index(batch_op.f('ix_subscription_stripe_subscription_id'))
        batch_op.drop_index(batch_op.f('ix_subscription_stripe_customer_id'))

    op.drop_table('subscription')
    with op.batch_alter_table('analysis', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_analysis_user_id'))
        batch_op.drop_index(batch_op.f('ix_analysis_date_created'))

    op.drop_table('analysis')
    with op.batch_alter_table('user', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_user_username'))
        batch_op.drop_index(batch_op.f('ix_user_email'))

    op.drop_table('user')
    # ### end Alembic commands ###
